syntax = "proto3";
package service.users;

import public "users/message.proto";
import public "users/request.proto";
import public "users/response.proto";

service UserService {
    rpc find(UserRequest) returns (User);
    rpc findMany(UserListRequest) returns (UserListResponse);
}